# somax

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.library  README.modules  README.plugins  aclocal.m4  config.h.in  configure  configure.ac  somax-config.1  somax-editor.1  somax-nextitem.1  somax.1  somax.pc  somax.pc.in
icons/: Makefile.am  Makefile.in
po/: ChangeLog  Makevars  POTFILES.in  el.gmo  el.po  es.gmo  es.po  fr.gmo  fr.po  it.gmo  it.po  somax.pot
src/: Makefile.am  Makefile.in
src/commons/: Makefile.am  Makefile.in  commons.c  commons.h  data.h  dialog.c  help.c  help.h  interface.c  interface.h  save.c  save.h  splash.c  splash.h  stat.c  stat.h  statusbar.c  x.c  x.h
src/config/: Makefile.am  Makefile.in  cfg.h  comments.h  exec.c  file.c  host.c  main.c
src/confuse/: Makefile.am  Makefile.in  confuse.c  confuse.h  lexer.c
src/draw/: Makefile.am  Makefile.in  draw.c  draw.h
src/editor/: Makefile.am  Makefile.in  color.c  daemon.c  edit.c  editor.h  file.c  main.c  maker.c  view.c
src/filechooser/: Makefile.am  Makefile.in  filechooser.c  filechooser.h  r_filechooser.c
src/ghthash/: Makefile.am  Makefile.in  README  ght_hash_table.h  hash_functions.c  hash_table.c
src/maker/: Makefile.am  Makefile.in  maker.c  maker.h  maker_pl.c  maker_spot.c
src/modules/: Makefile.am  Makefile.in  module.h  modules.c  modules.h
src/nextitem/: Makefile.am  Makefile.in  main.c  nextitem.c  nextitem.h
src/palinsesto/: Makefile.am  Makefile.in  palinsesto.c  palinsesto.h  spot.c  timer.c
src/plugins/: Makefile.am  Makefile.in  plugins.c  plugins.h
src/plugins/plugins/: Makefile.am  Makefile.in  editor.c  parser.c  parser.h  plugin.c  plugin.h  plugin_internal.h  print.c
src/timer/: Makefile.am  Makefile.in  timer.c  timer.h
src/x/: Makefile.am  Makefile.in  buttons.c  change.c  daemon.c  interface.c  list.c  main.c  maker.c  nextitem.c  preferences.c  somax.h  time.c  timeout.c  tlist.c  tooltips.c
