SUBDIRS = po intl src icons

EXTRA_DIST = \
	somax.pc \
	somax.pc.in \
	README.modules \
	README.plugins \
	README.library \
	somax.1 \
	somax-config.1 \
	somax-editor.1 \
	somax-nextitem.1

man_MANS = \
	somax.1 \
	somax-config.1 \
	somax-editor.1 \
	somax-nextitem.1

ACLOCAL_AMFLAGS = -I m4

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = somax.pc
