EXTRA_DIST = \
	somax.png \
	somax-editor.png \
	somax-nextitem.png \
	bootsplash.png \
	maker_dir_locale.png \
	maker_file_locale.png \
	maker_dir_remote.png \
	maker_file_remote.png \
	maker_remove.png

icons_DATA = \
	somax.png \
	somax-editor.png \
	somax-nextitem.png \
	bootsplash.png \
	maker_dir_locale.png \
	maker_file_locale.png \
	maker_dir_remote.png \
	maker_file_remote.png \
	maker_remove.png

iconsdir = $(datadir)/@PACKAGE@



