if ENABLE_CONFUSE
confuse = confuse
endif

SUBDIRS = \
	$(confuse) \
	ghthash \
	commons \
	filechooser \
	palinsesto \
	maker \
	draw \
	timer \
	plugins \
	modules \
	nextitem \
	x \
	editor \
	config

DIST_SUBDIRS = \
	confuse \
	ghthash \
	commons \
	filechooser \
	palinsesto \
	maker \
	draw \
	timer \
	plugins \
	modules \
	nextitem \
	x \
	editor \
	config

